<resources>
    <string name="app_name">sqlite_db</string>
    <string name="data_mahasiswa">data mahasiswa</string>
    <string name="jurusan">Fakultas / Jurusan :</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="lk">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="date">Tanggal Lahir</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="jurusan_v">Jurusan</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string-array name="daftar_jurusan">
        <item> Teknik Informatika </item>
        <item> Teknik Elektro </item>
        <item> Administrasi Negara </item>
        <item> Manajemen </item>
        <item> Akuntansi </item>
        <item> Bahasa Jerman </item>
        <item> Bahasa Perancis </item>
    </string-array>


</resources>
